--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 /*  Header */
 header {
-    background: #c796d1;
+    background: #af82b8;
     color: white;
     padding: 20px;
     font-size: 24px;
